--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -16,28 +16,31 @@
   z-index: 15;
 }
 
-.card__img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.card > span {
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  z-index: 10 !important;
+  width: 100% !important;
+  height: 100% !important;
 }
 
-.card__text {
+.card > span img {
+  object-fit: cover !important;
+}
+
+.cardText {
   margin: 13em 1rem 2em 1rem;
   position: relative;
   z-index: 20;
   color: white;
 }
 
-.card__text--header {
+.cardTextHeader {
   margin: 0;
 }
 
-.card__text--paragraph {
+.cardTextParagraph {
   margin: 1em 0 0 0;
 }
