--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -61,8 +61,8 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+    DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
@@ -106,6 +106,17 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.recipesWrap {
+  display: flex;
+  flex-direction: row;
+  margin-left: -1rem;
+  margin-right: -1rem;
+}
+
+.recipesWrap > div {
+  margin: 1rem;
 }
 
 @media (max-width: 600px) {
